# ccw-launcher-V2

./: .eslintrc.js  README.md  README_ZH.md  index.html  package-lock.json  package.json  updater.json
.cargo/: config.toml
.github/workflows/: build_windows.yml  pushGitee.yml
.tauri/: myapp.key  myapp.key.pub
readme/: Chinese.md
src/: App.css  App.module.scss  App.tsx  globals.ts  main.js  mainScript.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/body/home/: Home.module.scss  index.tsx
src/components/body/home/ProjectCard/: ProjectCard.module.scss  index.tsx
src/components/body/home/ProjectCard/Ttag/: index.tsx
src/components/body/home/ProjectList/: ProjectList.module.scss  index.tsx
src/components/body/set/: index.tsx
src/components/body/settings/: index.tsx  setting.module.scss
src/components/first/: index.tsx
src/components/header/: Navbar.module.scss  header.tsx
src/components/header/avatar/: index.tsx
src/components/popup/: index.tsx
src/page/app/: hack.js
src/page/game/: hack.js
src/page/install/: hack.js  index.html
src/page/login/: hack.js  index.html
src/page/logout/: after.js  hack.js
src/page/update/: hack.js
src/page/userHome/: hack.js
